@@ -1,6 +1,2 @@
 TODO.txt
 build/NEWS
-build/README.VPatch
-build/README.InstallOptions
-build/README.MultiUser
-build/README.nsDialogs
